make navbar not fixed
The fixed navbar takes up precious vertical space (esp. on mobile), which impedes readability. It can also be complex and error-prone (for example, the liveblog indexes lacked padding-top, so their page titles overlapped with the navbar).

Note that https://stripe.com and https://stripe.com/blog also got rid of their fixed navbar recently, so there is precedent.

--- a/website/src/css/components/_Header.scss
+++ b/website/src/css/components/_Header.scss
@@ -39,9 +39,6 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .navbar-light {
-        background-color: #fff;
-    }
     .darkBackground .navbar-nav .btn,
     .navbar-light .navbar-nav .btn {
         padding: 0.25rem 0.75rem;
